v4.8.0/_sources/generated/generated/pcdsdevices.lodcm.SimEnergySi.rst.txt
pcdsdevices.lodcm.SimEnergySi
=============================

.. currentmodule:: pcdsdevices.lodcm

.. autoclass:: SimEnergySi

   
   
    .. list-table:: Ophyd Device Components
       :header-rows: 1
       :widths: auto

       *  - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
   
       *  -  tower1 (FCpt)
          -  :class:`~pcdsdevices.lodcm.CrystalTower1`
          -  ``{self._prefix}``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.lodcm.LODCMEnergySi`
   
       *  -  tower2 (FCpt)
          -  :class:`~pcdsdevices.lodcm.CrystalTower2`
          -  ``{self._prefix}``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.lodcm.LODCMEnergySi`
   
       *  -  dr
          -  :class:`~pcdsdevices.sim.FastMotor`
          -  
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.lodcm.LODCMEnergySi`
   
       *  -  th1Si
          -  :class:`~pcdsdevices.sim.FastMotor`
          -  
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.lodcm.LODCMEnergySi`
   
       *  -  th2Si
          -  :class:`~pcdsdevices.sim.FastMotor`
          -  
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.lodcm.LODCMEnergySi`
   
       *  -  z1Si
          -  :class:`~pcdsdevices.sim.FastMotor`
          -  
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.lodcm.LODCMEnergySi`
   
       *  -  z2Si
          -  :class:`~pcdsdevices.sim.FastMotor`
          -  
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.lodcm.LODCMEnergySi`
   
       *  -  energy
          -  :class:`~pcdsdevices.pseudopos.PseudoSingleInterface`
          -  
          -  
          -  hinted
          -  Inherited from :class:`~pcdsdevices.lodcm.LODCMEnergySi`
   

   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   

   
   


    
    
    .. rubric:: Methods

    .. autosummary::
       :toctree: generated
    
       ~SimEnergySi.calc_geometry
       ~SimEnergySi.camonitor
       ~SimEnergySi.check_single
       ~SimEnergySi.configure
       ~SimEnergySi.describe
       ~SimEnergySi.end_monitor_thread
       ~SimEnergySi.forward
       ~SimEnergySi.get
       ~SimEnergySi.get_energy
       ~SimEnergySi.get_reflection
       ~SimEnergySi.inverse
       ~SimEnergySi.move
       ~SimEnergySi.move_single
       ~SimEnergySi.mv
       ~SimEnergySi.mv_ginput
       ~SimEnergySi.mvr
       ~SimEnergySi.read
       ~SimEnergySi.read_configuration
       ~SimEnergySi.set
       ~SimEnergySi.set_current_position
       ~SimEnergySi.set_position
       ~SimEnergySi.stage_group_instances
       ~SimEnergySi.status
       ~SimEnergySi.stop
       ~SimEnergySi.summary
       ~SimEnergySi.to_pseudo_tuple
       ~SimEnergySi.to_real_tuple
       ~SimEnergySi.trigger
       ~SimEnergySi.tweak
       ~SimEnergySi.umv
       ~SimEnergySi.umvr
       ~SimEnergySi.wait
       ~SimEnergySi.wm
       ~SimEnergySi.wm_update
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::
    
       ~SimEnergySi.composite_egu
       ~SimEnergySi.concurrent
       ~SimEnergySi.configuration_attrs
       ~SimEnergySi.connected
       ~SimEnergySi.egu
       ~SimEnergySi.high_limit
       ~SimEnergySi.hints
       ~SimEnergySi.kind
       ~SimEnergySi.limits
       ~SimEnergySi.low_limit
       ~SimEnergySi.moving
       ~SimEnergySi.needs_parent
       ~SimEnergySi.position
       ~SimEnergySi.pseudo_positioners
       ~SimEnergySi.real_position
       ~SimEnergySi.real_positioners
       ~SimEnergySi.sequential
       ~SimEnergySi.settle_time
       ~SimEnergySi.stage_group
       ~SimEnergySi.target
       ~SimEnergySi.timeout
    
    